[gd_scene load_steps=36 format=2]

[ext_resource path="res://Player2.gd" type="Script" id=1]
[ext_resource path="res://rocket assets/graphics/rocket/rocket-fire.png" type="Texture" id=2]
[ext_resource path="res://full rocket.png" type="Texture" id=3]
[ext_resource path="res://rocket assets/graphics/background/marsgradient.png" type="Texture" id=4]
[ext_resource path="res://rocket assets/graphics/background/space.png" type="Texture" id=5]
[ext_resource path="res://rocket assets/graphics/background/martian background.png" type="Texture" id=6]
[ext_resource path="res://rocket assets/graphics/Sounds/Constant Rocket Engines 1.ogg" type="AudioStream" id=7]
[ext_resource path="res://EndlessMode.gd" type="Script" id=8]
[ext_resource path="res://BigAsteroid1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Asteroid1.tscn" type="PackedScene" id=10]
[ext_resource path="res://Satellite1.tscn" type="PackedScene" id=11]
[ext_resource path="res://rocket assets/graphics/rocket/explosion.png" type="Texture" id=12]
[ext_resource path="res://rocket assets/graphics/animeace.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://rocket assets/graphics/Sounds/Big Explosion Effect Video Mp4 HD Sound.ogg" type="AudioStream" id=14]
[ext_resource path="res://rocket assets/graphics/HUD/lifebar_fill.png" type="Texture" id=15]
[ext_resource path="res://rocket assets/graphics/HUD/lifebar_bg.png" type="Texture" id=16]
[ext_resource path="res://rocket assets/graphics/Sounds/8 Bit Beginning! Slow Chill Game Music by HeatleyBros.ogg" type="AudioStream" id=17]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.5872
height = 55.7372

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fire:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 128, 110 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 128, 110 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 128, 110 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 110, 128, 110 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 110, 128, 110 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 110, 128, 110 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 220, 128, 110 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 220, 128, 110 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 220, 128, 110 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 1121.89, 10 )

[sub_resource type="DynamicFont" id=14]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=15]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=17]
size = 25
outline_size = 1
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=18]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[node name="EndlessMode" type="Node2D"]
script = ExtResource( 8 )
Asteroid = ExtResource( 10 )
BigAsteroid = ExtResource( 9 )
Satellite = ExtResource( 11 )

[node name="Space2" type="Sprite" parent="."]
position = Vector2( 1020, -5392 )
texture = ExtResource( 5 )

[node name="Space1" type="Sprite" parent="."]
position = Vector2( 1020, -2000 )
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2048.0
margin_bottom = 1280.0
color = Color( 1, 0.894118, 0.792157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1020.58, -167.814 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1024, 1128.7 )
texture = ExtResource( 6 )

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 1024.02, 1208.84 )
collision_mask = 2
script = ExtResource( 1 )

[node name="fire" type="Sprite" parent="Player2"]
position = Vector2( -0.302734, 50.2627 )
scale = Vector2( 0.129559, 0.123666 )
texture = ExtResource( 2 )
offset = Vector2( 0, -20 )

[node name="Sprite" type="Sprite" parent="Player2"]
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 0, 7.62939e-06 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player2"]
current = true
limit_left = 0
limit_right = 2048
limit_bottom = 1280

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player2"]
"anims/New Anim" = SubResource( 2 )

[node name="EngineSound" type="AudioStreamPlayer" parent="Player2"]
stream = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player2"]
visible = false
frames = SubResource( 12 )

[node name="BoomSound" type="AudioStreamPlayer" parent="Player2"]
stream = ExtResource( 14 )

[node name="Floor" type="RigidBody2D" parent="."]
position = Vector2( 0.157778, 0.15778 )
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 1022.64, 1260.48 )
shape = SubResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 13.4617
margin_top = 13.7076
margin_right = 485.462
margin_bottom = 83.7076
custom_fonts/font = SubResource( 14 )
text = "Score:0
Highscore:0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 291.662
margin_top = 678.364
margin_right = 431.662
margin_bottom = 743.364
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
disabled = true
text = "retry"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Label" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 176.981
margin_top = 169.807
margin_right = 548.981
margin_bottom = 540.807
custom_fonts/font = SubResource( 16 )
text = "welcome to endless mode!

After your long journey, you have finally landed on Mars. Your next mission: the Universe and beyond!

Your goal is to travel the furthest distance into space. To help you, you have infinite fuel. However, you have limited health. Moreover, the engine of your rocket runs constantly. As you go further and further, the speed of your rocket will increase.

Good luck!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
margin_left = 295.661
margin_top = 561.831
margin_right = 433.661
margin_bottom = 615.831
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 314.63
margin_top = 571.947
margin_right = 408.63
margin_bottom = 599.947
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="CanvasLayer"]
margin_left = 438.103
margin_top = 18.5906
margin_right = 697.103
margin_bottom = 46.5906
max_value = 1000.0
value = 1000.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 15 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 303.766
margin_top = 751.324
margin_right = 408.766
margin_bottom = 795.324
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
disabled = true
text = "exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
autoplay = true
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_Exit_pressed"]
